# today-has-been

./: .gitignore  Cargo.toml  FASTN.ftd  README.md  default-06867EF90EF76F01CF0BAC0D40CD6913A844F12E60606EF36C353D70BBD6E585.js  index.html  manifest.json  rust-toolchain
.github/workflows/: notify_free_trial_expire.yml
FASTN/: ds.ftd
FASTN/ds/: index.html
backend/: Cargo.toml
backend/src/: add_post.rs  change_media_urls.rs  charge_subscription.rs  free_trial.rs  get_gupshup_medias.rs  get_posts.rs  get_stripe_link.rs  get_user_details.rs  lib.rs  login.rs  logout.rs  notify_free_trial_expired.rs  payment_link.rs  register.rs  schema.rs  stripe_webhooks.rs  user.rs  user_timezone.rs
common/: Cargo.toml
common/src/: lib.rs  schema.rs
frontend/: FASTN.ftd  about.ftd  all-users.ftd  backend.wasm  form.ftd  free-trial-failure.ftd  free-trial-success.ftd  function.js  ga.ftd  ga.js  get-free-plan.ftd  get_free_plan.ftd  index.ftd  insert.ftd  login.ftd  old-payment.ftd  payment-new.ftd  payment-old.ftd  payment-status.ftd  payment.ftd  posts.ftd  privacy.ftd  terms.ftd  user-details.ftd  utils.ftd
frontend/web-components/: payment.js
scripts/: auto.sh  gupshup_media_to_s3.py
sidebar/: index.html
thb_stripe/: Cargo.toml
thb_stripe/src/: charge_subscription.rs  get_stripe_link.rs  lib.rs  payment_link.rs  stripe_webhooks.rs
thb_stripe/src/scripts/: call_gupshup_callback_for_subscriber_with_timezone.rs  mod.rs
