[workspace]
members = [
     "backend", "stripe",
]
resolver = "2"

[profile.release]
lto = true
opt-level = 's'

[workspace.package]
authors = [
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Arpita Jaiswal <arpita@fifthtry.com>",
    "Rithik Seth <rithik@fifthtry.com>",
]
edition = "2021"
description = "ft: FifthTry Backend"
license = "Copyright FifthTry"
repository = "https://github.com/FifthTry/dotcom"
homepage = "https://www.fifthtry.com"


[workspace.dependencies]
ft-sdk = { version = "0.1.11", features = ["field-extractors", "auth-provider"] }
bytes = "1.0"
http = "1.0"
chrono = { version = "0.4", features = ["serde"], default-features = false }
serde_json = "1"
serde = {  version = "1", features = ["derive"] }
cookie = "0.18"
rand_core = "0.6"
uuid = { version = "1.8", features = ["v8"], default-features = false }


[workspace.dependencies.diesel]
version = "2"
no_default_features = true
features = [
    "chrono", # diesel::sql_types::Timestamptz -> chrono::DateTime<chrono::Utc>
]
