[package]
name = "backend"
version = "0.1.0"
edition.workspace = true


[lib]
crate-type = ["cdylib"]

[dependencies]
ft-sdk.workspace = true
bytes.workspace = true
http.workspace = true
diesel.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
cookie.workspace = true
rand_core.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde_qs.workspace = true
serde_path_to_error.workspace = true
common.workspace = true
