[package]
name = "thb_stripe"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true


[lib]
crate-type = ["cdylib"]


[dependencies]
ft-sdk.workspace = true
ft-stripe.workspace = true
diesel.workspace = true
bytes.workspace = true
http.workspace = true
common.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
